--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --port 4222",
+    "mock": "json-server --watch mock.json --port 3001",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -22,8 +23,10 @@
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.0",
+    "ngx-mask": "^12.0.0",
     "ngx-toastr": "^14.0.0",
     "rxjs": "~7.5.0",
+    "socket.io-client": "^4.5.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
