--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,90 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+#==============================#
+#            ANGULAR           #
+#==============================#
 # Compiled output
-/dist
-/tmp
-/out-tsc
-/bazel-out
+front-angular/dist
+front-angular/tmp
+front-angular/out-tsc
+front-angular/bazel-out
 
 # Node
-/node_modules
-npm-debug.log
-yarn-error.log
+front-angular/node_modules
+front-angular/npm-debug.log
+front-angular/yarn-error.log
 
 # IDEs and editors
-.idea/
-.project
-.classpath
-.c9/
-*.launch
-.settings/
-*.sublime-workspace
+front-angular/.idea/
+front-angular/.project
+front-angular/.classpath
+front-angular/.c9/
+front-angular/*.launch
+front-angular/.settings/
+front-angular/*.sublime-workspace
 
 # Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-.history/*
+front-angular/.vscode/*
+front-angular/!.vscode/settings.json
+front-angular/!.vscode/tasks.json
+front-angular/!.vscode/launch.json
+front-angular/!.vscode/extensions.json
+front-angular/.history/*
 
 # Miscellaneous
-/.angular/cache
-.sass-cache/
-/connect.lock
-/coverage
-/libpeerconnection.log
-testem.log
-/typings
+front-angular/.angular/cache
+front-angular/.sass-cache/
+front-angular/connect.lock
+front-angular/coverage
+front-angular/libpeerconnection.log
+front-angular/testem.log
+front-angular/typings
 
 # System files
-.DS_Store
-Thumbs.db
+front-angular/.DS_Store
+front-angular/Thumbs.db
+
+
+#==============================#
+#              NODE            #
+#==============================#
+# Compiled output
+api-node/dist
+api-node/tmp
+api-node/out-tsc
+api-node/bazel-out
+
+# Node
+api-node/node_modules
+api-node/npm-debug.log
+api-node/yarn-error.log
+
+# IDEs and editors
+api-node/.idea/
+api-node/.project
+api-node/.classpath
+api-node/.c9/
+api-node/*.launch
+api-node/.settings/
+api-node/*.sublime-workspace
+
+# Visual Studio Code
+api-node/.vscode/*
+api-node/!.vscode/settings.json
+api-node/!.vscode/tasks.json
+api-node/!.vscode/launch.json
+api-node/!.vscode/extensions.json
+api-node/.history/*
+
+# Miscellaneous
+api-node/.angular/cache
+api-node/.sass-cache/
+api-node/connect.lock
+api-node/coverage
+api-node/libpeerconnection.log
+api-node/testem.log
+api-node/typings
+
+# System files
+api-node/.DS_Store
+api-node/Thumbs.db
